<resources>
    <string name="app_name">Aeroh</string>
    <string name="aeroh_link_string">Aeroh Link</string>
    <string name="aeroh_slogan">Make your home smarter with Aeroh link.</string>
    <string name="sign_up_button_txt">Sign up</string>
    <string name="login_txt">Log in</string>
    <string name="or_txt">OR</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="name_txt">Name</string>
    <string name="internet_error">Network Error!</string>
    <string name="empty_name_error">Please enter your name</string>
    <string name="empty_email_error">Please enter your email</string>
    <string name="empty_password_error">Please enter your password</string>
    <string name="email_in_use_error">Email has already been taken</string>
    <string name="invalid_credentials">Email or password is invalid</string>
    <string name="invalid_format_email">Please enter a valid email</string>
    <string name="invalid_format_password">Please choose a strong password</string>
    <string name="title_activity_firmware_update">FirmwareUpdateActivity</string>
    <string name="toolbar_heading_1">Hi, There</string>
    <string name="toolbar_heading_2">Good to see you again</string>
    <string name="logout_string">Log Out</string>
    <string name="drawer_open_string">Open Drawer</string>
    <string name="drawer_close_string">Close Drawer</string>
    <string name="first_name_txt">First Name</string>
    <string name="positive_sign"></string>
    <string name="add_new_device_text">Add a New Device</string>
    <string name="devices_txt">Devices</string>
    <string name="no_devices_txt1">No Devices Found</string>
    <string name="no_devices_txt2">Please add a new device</string>
</resources>
