<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_black"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aeroh_white_logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="310dp"
        android:text="@string/sign_up_button_txt"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/background_with_stroke_white"
        android:hint="@string/name_txt"
        android:inputType="text"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_with_stroke_white"
        android:hint="@string/email_txt"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_with_stroke_white"
        android:hint="@string/password_txt"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/button_background_stroke_yellow"
        android:text="@string/sign_up_button_txt"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/top_line"
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/or_txt"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <View
            android:id="@+id/bottom_line"
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:background="@android:color/white" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/button_background_stroke"
        android:text="@string/login_txt"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
