<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/devicesActivityDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_black"
    tools:context=".DevicesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/devicesActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/secondary_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/toolbar_heading_1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="-10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_heading_2"
                android:textColor="@color/grey"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/hamburgerIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_hamburger" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/add_device_background"
            android:gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_new_device_text"
                android:textColor="@color/white"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnAddDevice"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/font_awesome_6_pro_regular"
                android:text="@string/positive_sign"
                android:textColor="@color/black"
                android:layout_marginHorizontal="25dp"
                android:textSize="18sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/devices_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/devicesActivityToolbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/devicesActivityNavigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/secondary_black"
        app:headerLayout="@layout/devices_navigation_header"
        app:itemBackground="@color/secondary_black"
        app:itemHorizontalPadding="30dp"
        app:itemIconPadding="15dp"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/white"
        app:itemTextAppearance="@style/MyTextAppearance"
        app:itemTextColor="@color/white"
        app:menu="@menu/devices_navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
